--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <span>Hello world!</span>
+    <br>
+        {% comment %} <a href="{% url 'mydate' '2019' '01' '10' %}">Click me to see the date!</a> {% endcomment %}
+         <a href="{% url 'index:mydate' '2019' '02' '04' %}">Click me to see the date!</a>
 </body>
 </html>
