--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <title>Hello world</title>
 </head>
 <body>
-    <span>Hello world!</span>
-    <br>
-        {% comment %} <a href="{% url 'mydate' '2019' '01' '10' %}">Click me to see the date!</a> {% endcomment %}
-         <a href="{% url 'index:mydate' '2019' '02' '04' %}">Click me to see the date!</a>
+    <a href="{%url 'index:download1'%}">HttpResponse下载</a><br>
+    <a href="{%url 'index:download2'%}">StreamingHttpResponse下载</a><br>
+    <a href="{%url 'index:download3'%}">FileResponse下载</a><br>
+
 </body>
 </html>
